--- a/src/app/_components/offer-new/_components/offer-details/offer-details.html
+++ b/src/app/_components/offer-new/_components/offer-details/offer-details.html
@@ -201,7 +201,7 @@
           </div>
         </div>
       }
-      <div class="offer--description xlg:pt-5 pt-4">
+      <div class="offer--description xlg:pt-5 pt-4 xlg:pb-0 pb-5">
         <h3 class="pb-5">W racie najmu od flexmile!</h3>
         @for (description of descriptionList; track description.label) {
           <div class="flex offer--description_item xlg:mb-5 mb-3">
