--- a/src/app/_components/utilities/car/car.html
+++ b/src/app/_components/utilities/car/car.html
@@ -99,7 +99,7 @@
     @if (offer().image) {
       <img [src]="offer().image" alt="" class="car-card__image block">
     } @else {
-      <img src="/layout/images/car_test.png" alt="" class="car-card__image block">
+      <img src="/layout/images/no-image.png" alt="" class="car-card__image block">
     }
   </div>
 </ng-template>
