--- a/src/app/_components/utilities/footer/footer.html
+++ b/src/app/_components/utilities/footer/footer.html
@@ -98,7 +98,7 @@
         </div>
 
       <div class="col-12">
-        <div class="copyright py-5 text-right">
+        <div class="copyright py-5 xlg:text-right text-left">
           © Copyrigt by <span>flexmile</span> 2025. Wszelkie prawa zastrzeżone
         <div class="urls">
           <flexmile-link [url]="'/polityka-prywatnosci'" title="Polityka prywatności"></flexmile-link>
