--- a/src/app/_components/maintenance/maintenance.html
+++ b/src/app/_components/maintenance/maintenance.html
@@ -27,7 +27,7 @@
       prosto do celu!
     </h3>
     <div class="social">
-      <a href="#">
+      <a href="https://www.facebook.com/profile.php?id=61584429827699&mibextid=wwXIfr&rdid=Qro2BGPjh2hQWhmw">
         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40" fill="none">
           <rect x="1.25" y="1.25" width="37.5" height="37.5" rx="18.75" stroke="#C1D342" stroke-width="2.5"/>
           <path d="M29.6875 20.5C29.6875 25.3438 26.1328 29.3672 21.4844 30.0703V23.3125H23.75L24.1797 20.5H21.4844V18.7031C21.4844 17.9219 21.875 17.1797 23.0859 17.1797H24.2969V14.7969C24.2969 14.7969 23.2031 14.6016 22.1094 14.6016C19.9219 14.6016 18.4766 15.9688 18.4766 18.3906V20.5H16.0156V23.3125H18.4766V30.0703C13.8281 29.3672 10.3125 25.3438 10.3125 20.5C10.3125 15.1484 14.6484 10.8125 20 10.8125C25.3516 10.8125 29.6875 15.1484 29.6875 20.5Z" fill="white"/>
