--- a/src/app/_components/home-page/_components/why-us/why-us.html
+++ b/src/app/_components/home-page/_components/why-us/why-us.html
@@ -277,10 +277,10 @@
       </div>
       <div class="cars">
         <div class="left">
-          <img src="/layout/images/left-car.webp" alt="flexmile">
+          <img src="/layout/images/left-car.webp" alt="Samochody do wynajmu Flexmile - nowoczesna flota pojazdów" loading="lazy">
         </div>
         <div class="right">
-          <img src="/layout/images/right-car.webp" alt="flexmile">
+          <img src="/layout/images/right-car.webp" alt="Wynajem samochodów dla firm Flexmile - szeroka oferta pojazdów" loading="lazy">
         </div>
       </div>
     </div>
