--- a/src/app/_components/offer-new/_components/offer-details/offer-details.html
+++ b/src/app/_components/offer-new/_components/offer-details/offer-details.html
@@ -74,7 +74,7 @@
             }
           </div>
           <div class="offer__body-gallery">
-            <flexmile-offer-gallery [gallery]="details().gallery!" [hideControls]="true"></flexmile-offer-gallery>
+            <flexmile-offer-gallery [gallery]="details().gallery!" [hideControls]="true" [carBrand]="details().brand.name" [carModel]="details().model"></flexmile-offer-gallery>
           </div>
         </div>
         <div class="offer__body-form">
