--- a/src/app/_components/offer-new/_components/offer-order/offer-order.html
+++ b/src/app/_components/offer-new/_components/offer-order/offer-order.html
@@ -4,14 +4,17 @@
       <flexmile-loader></flexmile-loader>
     </div>
   }
-  <div class="go-back px-7 py-5">
+  <div class="go-back px-7 py-5 hidden xl:flex">
     <span (click)="backToDetails()"><i class="pi pi-arrow-left"></i> Wróć</span>
   </div>
   <div class="container" [formGroup]="orderForm">
-
-    <div class="flex">
-      <div class="offer-order_left">
+    <div class="go-back py-5 flex xl:hidden">
+      <span (click)="backToDetails()"><i class="pi pi-arrow-left"></i> Wróć</span>
+    </div>
+    <div class="grid justify-content-around">
+      <div class="xl:col-6 col-12 xl:pr-6 offer-order_left">
         <div>
+          <div class="xl:hidden block mobile_title pb-2">{{ details().brand.name }} {{ details().model }}</div>
           <h2 class="pb-3">
             @if (details().attributes.coming_soon) {
               Zarezerwuj
@@ -30,7 +33,7 @@
             </span>
           <div class="offer-order-details">
             <div class="offer-order-details_section">
-              <h4 class="mb-5">Szczegóły zamówienia</h4>
+              <h4 class="mb-4 xl:mb-5">Szczegóły zamówienia</h4>
               <div>
                 <span>Czas trwania umowy <span> (w miesiącach)</span></span>
                 <div class="periods flex gap-2 flex-wrap pb-5">
@@ -74,44 +77,31 @@
             <div class="offer-order-details_section pb-4">
               <h4 class="mb-5">Dane firmy</h4>
               <div class="grid">
-                <div class="col-6 order-input">
+                <div class="xlg:col-6 col-12 order-input">
                   <flexmile-input [classList]="'w-full'" label="Nazwa firmy" placeholder="Wpisz nazwę firmy"
                                   [control]="orderForm.get('company_name')"
                                   inputId="company_name"></flexmile-input>
                 </div>
-                <div class="col-6 order-input">
+                <div class="xlg:col-6 col-12 order-input">
                   <flexmile-input [classList]="'w-full'" label="NIP" placeholder="Wpisz NIP"
                                   [control]="orderForm.get('tax_id')"
                                   inputId="tax_id"></flexmile-input>
                 </div>
-                <div class="col-6 order-input">
+                <div class="xlg:col-6 col-12 order-input">
                   <flexmile-input [classList]="'w-full'" label="Email" placeholder="Wpisz Email"
                                   [control]="orderForm.get('email')"
                                   inputId="email"></flexmile-input>
                 </div>
-                <div class="col-6 order-input">
+                <div class="xlg:col-6 col-12 order-input">
                   <flexmile-input [classList]="'w-full'" label="Telefon" placeholder="Wpisz Telefon"
                                   [control]="orderForm.get('phone')"
                                   inputId="phone"></flexmile-input>
                 </div>
               </div>
             </div>
-            <div class="offer-order-banners">
-              <div class="pb-3">
-                <ng-template #banner1>Interesuje Cię <span style="color: #C1D342;">większa liczba</span><br>samochodów
-                  dla Twojej firmy?
-                </ng-template>
-                <flexmile-banner-list size="small" [icon]="descriptionBanner.icon"
-                                      [bannerTemplate]="banner1"></flexmile-banner-list>
-              </div>
-              <div>
-                <ng-template #banner2>Wybierz <span style="color: #C1D342;">kolejny samochód</span> z naszej<br>oferty i
-                  złóż zamówienie!
-                </ng-template>
-                <flexmile-banner-list size="small" [icon]="descriptionBanner.icon"
-                                      [bannerTemplate]="banner2"></flexmile-banner-list>
-              </div>
-            </div>
+            @if (screen.screenSize() > 1024) {
+              <ng-container *ngTemplateOutlet="banners"></ng-container>
+            }
           </div>
         </div>
       </div>
@@ -119,12 +109,16 @@
         <div class="p-4">
           @if (details().attributes.available_immediately || details().attributes.coming_soon) {
             <div class="right_label mb-4" [ngClass]="{'soon' : details().attributes.coming_soon}">
-              @if(details().attributes.available_immediately){
+              @if (details().attributes.available_immediately) {
                 <div>
                   <div>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                      <path fill-rule="evenodd" clip-rule="evenodd" d="M17.6266 2.75726C16.5814 2.41516 15.1579 2.40004 12 2.40004C10.3062 2.40004 9.09591 2.40069 8.14215 2.46577C7.19916 2.5301 6.59487 2.65339 6.10388 2.85676C4.63372 3.46573 3.46568 4.63377 2.85671 6.10393C2.65334 6.59492 2.53006 7.19921 2.46572 8.14219C2.40064 9.09596 2.39999 10.3062 2.39999 12C2.39999 13.6938 2.40064 14.9041 2.46572 15.8579C2.53006 16.8009 2.65334 17.4052 2.85671 17.8961C3.46568 19.3663 4.63372 20.5343 6.10388 21.1433C6.59487 21.3467 7.19916 21.4699 8.14215 21.5342C9.09591 21.5994 10.3062 21.6 12 21.6C13.6938 21.6 14.9041 21.5994 15.8578 21.5342C16.8008 21.4699 17.4051 21.3467 17.896 21.1433C19.3663 20.5343 20.5342 19.3663 21.1432 17.8961C21.3466 17.4052 21.4699 16.8009 21.5342 15.8579C21.5994 14.9041 21.6 13.6938 21.6 12C21.6 11.0811 21.6 10.3006 21.5889 9.61935C21.5782 8.9567 22.1068 8.41086 22.7695 8.40019C23.4321 8.38951 23.978 8.91805 23.9887 9.5807C23.9999 10.2833 23.9999 11.0824 23.9999 11.9923V12.0442C23.9999 13.6842 23.9999 14.9761 23.9287 16.0212C23.8559 17.0865 23.7052 17.9824 23.3606 18.8146C22.508 20.8728 20.8728 22.508 18.8145 23.3606C17.9823 23.7053 17.0864 23.856 16.0212 23.9287C14.9761 24 13.6842 24 12.0443 24H11.9557C10.3158 24 9.02381 24 7.97878 23.9287C6.91359 23.856 6.01761 23.7053 5.18545 23.3606C3.12722 22.508 1.49196 20.8728 0.639407 18.8146C0.294719 17.9824 0.143964 17.0865 0.071292 16.0212C-1.18866e-05 14.9761 0 13.6842 0 12.0442V11.9559C0 10.3158 -1.18866e-05 9.02385 0.071292 7.97882C0.143964 6.91364 0.294719 6.01765 0.639407 5.18549C1.49196 3.12727 3.12722 1.49201 5.18545 0.639456C6.01761 0.294757 6.91359 0.144013 7.97877 0.0713416C9.02381 3.77252e-05 10.3158 3.76109e-05 11.9558 4.96109e-05H12C12.0869 4.96109e-05 12.1729 3.75783e-05 12.258 2.55783e-05C15.0775 -0.000406421 16.9158 -0.00068246 18.3733 0.476341C19.003 0.682488 19.3466 1.36021 19.1404 1.99008C18.9343 2.61993 18.2565 2.96342 17.6266 2.75726Z" fill="white"/>
-                      <path d="M23.4053 5.23663C23.9778 4.90269 24.1712 4.16792 23.8372 3.59545C23.5032 3.02299 22.7685 2.82964 22.1961 3.16357L21.9301 3.31872C17.686 5.79438 14.1911 9.35556 11.7966 13.6228L8.13596 9.96609C7.66709 9.49767 6.90728 9.49808 6.43891 9.96693C5.97053 10.4359 5.97094 11.1956 6.43981 11.664L11.256 16.475C11.5308 16.7496 11.9214 16.874 12.3043 16.8092C12.6872 16.7444 13.015 16.4983 13.1842 16.1487C15.3596 11.6533 18.8255 7.90819 23.1394 5.39179L23.4053 5.23663Z" fill="#C1D342"/>
+                      <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M17.6266 2.75726C16.5814 2.41516 15.1579 2.40004 12 2.40004C10.3062 2.40004 9.09591 2.40069 8.14215 2.46577C7.19916 2.5301 6.59487 2.65339 6.10388 2.85676C4.63372 3.46573 3.46568 4.63377 2.85671 6.10393C2.65334 6.59492 2.53006 7.19921 2.46572 8.14219C2.40064 9.09596 2.39999 10.3062 2.39999 12C2.39999 13.6938 2.40064 14.9041 2.46572 15.8579C2.53006 16.8009 2.65334 17.4052 2.85671 17.8961C3.46568 19.3663 4.63372 20.5343 6.10388 21.1433C6.59487 21.3467 7.19916 21.4699 8.14215 21.5342C9.09591 21.5994 10.3062 21.6 12 21.6C13.6938 21.6 14.9041 21.5994 15.8578 21.5342C16.8008 21.4699 17.4051 21.3467 17.896 21.1433C19.3663 20.5343 20.5342 19.3663 21.1432 17.8961C21.3466 17.4052 21.4699 16.8009 21.5342 15.8579C21.5994 14.9041 21.6 13.6938 21.6 12C21.6 11.0811 21.6 10.3006 21.5889 9.61935C21.5782 8.9567 22.1068 8.41086 22.7695 8.40019C23.4321 8.38951 23.978 8.91805 23.9887 9.5807C23.9999 10.2833 23.9999 11.0824 23.9999 11.9923V12.0442C23.9999 13.6842 23.9999 14.9761 23.9287 16.0212C23.8559 17.0865 23.7052 17.9824 23.3606 18.8146C22.508 20.8728 20.8728 22.508 18.8145 23.3606C17.9823 23.7053 17.0864 23.856 16.0212 23.9287C14.9761 24 13.6842 24 12.0443 24H11.9557C10.3158 24 9.02381 24 7.97878 23.9287C6.91359 23.856 6.01761 23.7053 5.18545 23.3606C3.12722 22.508 1.49196 20.8728 0.639407 18.8146C0.294719 17.9824 0.143964 17.0865 0.071292 16.0212C-1.18866e-05 14.9761 0 13.6842 0 12.0442V11.9559C0 10.3158 -1.18866e-05 9.02385 0.071292 7.97882C0.143964 6.91364 0.294719 6.01765 0.639407 5.18549C1.49196 3.12727 3.12722 1.49201 5.18545 0.639456C6.01761 0.294757 6.91359 0.144013 7.97877 0.0713416C9.02381 3.77252e-05 10.3158 3.76109e-05 11.9558 4.96109e-05H12C12.0869 4.96109e-05 12.1729 3.75783e-05 12.258 2.55783e-05C15.0775 -0.000406421 16.9158 -0.00068246 18.3733 0.476341C19.003 0.682488 19.3466 1.36021 19.1404 1.99008C18.9343 2.61993 18.2565 2.96342 17.6266 2.75726Z"
+                            fill="white"/>
+                      <path
+                        d="M23.4053 5.23663C23.9778 4.90269 24.1712 4.16792 23.8372 3.59545C23.5032 3.02299 22.7685 2.82964 22.1961 3.16357L21.9301 3.31872C17.686 5.79438 14.1911 9.35556 11.7966 13.6228L8.13596 9.96609C7.66709 9.49767 6.90728 9.49808 6.43891 9.96693C5.97053 10.4359 5.97094 11.1956 6.43981 11.664L11.256 16.475C11.5308 16.7496 11.9214 16.874 12.3043 16.8092C12.6872 16.7444 13.015 16.4983 13.1842 16.1487C15.3596 11.6533 18.8255 7.90819 23.1394 5.39179L23.4053 5.23663Z"
+                        fill="#C1D342"/>
                     </svg>
                   </div>
                   <div class="flex flex-column">
@@ -136,13 +130,17 @@
                 <div>
                   <div>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                      <path fill-rule="evenodd" clip-rule="evenodd" d="M17.6266 2.75726C16.5814 2.41516 15.1579 2.40004 12 2.40004C10.3062 2.40004 9.09591 2.40069 8.14215 2.46577C7.19916 2.5301 6.59487 2.65339 6.10388 2.85676C4.63372 3.46573 3.46568 4.63377 2.85671 6.10393C2.65334 6.59492 2.53006 7.19921 2.46572 8.14219C2.40064 9.09596 2.39999 10.3062 2.39999 12C2.39999 13.6938 2.40064 14.9041 2.46572 15.8579C2.53006 16.8009 2.65334 17.4052 2.85671 17.8961C3.46568 19.3663 4.63372 20.5343 6.10388 21.1433C6.59487 21.3467 7.19916 21.4699 8.14215 21.5342C9.09591 21.5994 10.3062 21.6 12 21.6C13.6938 21.6 14.9041 21.5994 15.8578 21.5342C16.8008 21.4699 17.4051 21.3467 17.896 21.1433C19.3663 20.5343 20.5342 19.3663 21.1432 17.8961C21.3466 17.4052 21.4699 16.8009 21.5342 15.8579C21.5994 14.9041 21.6 13.6938 21.6 12C21.6 11.0811 21.6 10.3006 21.5889 9.61935C21.5782 8.9567 22.1068 8.41086 22.7695 8.40019C23.4321 8.38951 23.978 8.91805 23.9887 9.5807C23.9999 10.2833 23.9999 11.0824 23.9999 11.9923V12.0442C23.9999 13.6842 23.9999 14.9761 23.9287 16.0212C23.8559 17.0865 23.7052 17.9824 23.3606 18.8146C22.508 20.8728 20.8728 22.508 18.8145 23.3606C17.9823 23.7053 17.0864 23.856 16.0212 23.9287C14.9761 24 13.6842 24 12.0443 24H11.9557C10.3158 24 9.02381 24 7.97878 23.9287C6.91359 23.856 6.01761 23.7053 5.18545 23.3606C3.12722 22.508 1.49196 20.8728 0.639407 18.8146C0.294719 17.9824 0.143964 17.0865 0.071292 16.0212C-1.18866e-05 14.9761 0 13.6842 0 12.0442V11.9559C0 10.3158 -1.18866e-05 9.02385 0.071292 7.97882C0.143964 6.91364 0.294719 6.01765 0.639407 5.18549C1.49196 3.12727 3.12722 1.49201 5.18545 0.639456C6.01761 0.294757 6.91359 0.144013 7.97877 0.0713416C9.02381 3.77252e-05 10.3158 3.76109e-05 11.9558 4.96109e-05H12C12.0869 4.96109e-05 12.1729 3.75783e-05 12.258 2.55783e-05C15.0775 -0.000406421 16.9158 -0.00068246 18.3733 0.476341C19.003 0.682488 19.3466 1.36021 19.1404 1.99008C18.9343 2.61993 18.2565 2.96342 17.6266 2.75726Z" fill="#525252"/>
-                      <path d="M23.4053 5.23672C23.9778 4.90278 24.1712 4.16801 23.8372 3.59554C23.5032 3.02308 22.7685 2.82973 22.1961 3.16366L21.9301 3.31881C17.686 5.79448 14.1911 9.35565 11.7966 13.6229L8.13596 9.96618C7.66709 9.49776 6.90728 9.49817 6.43891 9.96702C5.97053 10.436 5.97094 11.1957 6.43981 11.6641L11.256 16.4751C11.5308 16.7496 11.9214 16.8741 12.3043 16.8093C12.6872 16.7445 13.015 16.4984 13.1842 16.1488C15.3596 11.6534 18.8255 7.90828 23.1394 5.39188L23.4053 5.23672Z" fill="#525252"/>
+                      <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M17.6266 2.75726C16.5814 2.41516 15.1579 2.40004 12 2.40004C10.3062 2.40004 9.09591 2.40069 8.14215 2.46577C7.19916 2.5301 6.59487 2.65339 6.10388 2.85676C4.63372 3.46573 3.46568 4.63377 2.85671 6.10393C2.65334 6.59492 2.53006 7.19921 2.46572 8.14219C2.40064 9.09596 2.39999 10.3062 2.39999 12C2.39999 13.6938 2.40064 14.9041 2.46572 15.8579C2.53006 16.8009 2.65334 17.4052 2.85671 17.8961C3.46568 19.3663 4.63372 20.5343 6.10388 21.1433C6.59487 21.3467 7.19916 21.4699 8.14215 21.5342C9.09591 21.5994 10.3062 21.6 12 21.6C13.6938 21.6 14.9041 21.5994 15.8578 21.5342C16.8008 21.4699 17.4051 21.3467 17.896 21.1433C19.3663 20.5343 20.5342 19.3663 21.1432 17.8961C21.3466 17.4052 21.4699 16.8009 21.5342 15.8579C21.5994 14.9041 21.6 13.6938 21.6 12C21.6 11.0811 21.6 10.3006 21.5889 9.61935C21.5782 8.9567 22.1068 8.41086 22.7695 8.40019C23.4321 8.38951 23.978 8.91805 23.9887 9.5807C23.9999 10.2833 23.9999 11.0824 23.9999 11.9923V12.0442C23.9999 13.6842 23.9999 14.9761 23.9287 16.0212C23.8559 17.0865 23.7052 17.9824 23.3606 18.8146C22.508 20.8728 20.8728 22.508 18.8145 23.3606C17.9823 23.7053 17.0864 23.856 16.0212 23.9287C14.9761 24 13.6842 24 12.0443 24H11.9557C10.3158 24 9.02381 24 7.97878 23.9287C6.91359 23.856 6.01761 23.7053 5.18545 23.3606C3.12722 22.508 1.49196 20.8728 0.639407 18.8146C0.294719 17.9824 0.143964 17.0865 0.071292 16.0212C-1.18866e-05 14.9761 0 13.6842 0 12.0442V11.9559C0 10.3158 -1.18866e-05 9.02385 0.071292 7.97882C0.143964 6.91364 0.294719 6.01765 0.639407 5.18549C1.49196 3.12727 3.12722 1.49201 5.18545 0.639456C6.01761 0.294757 6.91359 0.144013 7.97877 0.0713416C9.02381 3.77252e-05 10.3158 3.76109e-05 11.9558 4.96109e-05H12C12.0869 4.96109e-05 12.1729 3.75783e-05 12.258 2.55783e-05C15.0775 -0.000406421 16.9158 -0.00068246 18.3733 0.476341C19.003 0.682488 19.3466 1.36021 19.1404 1.99008C18.9343 2.61993 18.2565 2.96342 17.6266 2.75726Z"
+                            fill="#525252"/>
+                      <path
+                        d="M23.4053 5.23672C23.9778 4.90278 24.1712 4.16801 23.8372 3.59554C23.5032 3.02308 22.7685 2.82973 22.1961 3.16366L21.9301 3.31881C17.686 5.79448 14.1911 9.35565 11.7966 13.6229L8.13596 9.96618C7.66709 9.49776 6.90728 9.49817 6.43891 9.96702C5.97053 10.436 5.97094 11.1957 6.43981 11.6641L11.256 16.4751C11.5308 16.7496 11.9214 16.8741 12.3043 16.8093C12.6872 16.7445 13.015 16.4984 13.1842 16.1488C15.3596 11.6534 18.8255 7.90828 23.1394 5.39188L23.4053 5.23672Z"
+                        fill="#525252"/>
                     </svg>
                   </div>
                   <div class="flex flex-column">
                     <b>DOSTĘPNY WKRÓTCE</b>
-                    <span>{{details().coming_soon_date}}</span>
+                    <span>{{ details().coming_soon_date }}</span>
                   </div>
                 </div>
               }
@@ -160,7 +158,7 @@
           </div>
           <div class="right_img">
             @if (details().gallery.length) {
-              <img src="{{details().gallery[0].medium}}" alt="{{ details().brand.name }} {{ details().model }}">
+              <img src="{{details().gallery[0].large}}" alt="{{ details().brand.name }} {{ details().model }}">
             } @else {
               <img src="/layout/images/no-image.png" alt="{{ details().brand.name }} {{ details().model }}">
             }
@@ -187,7 +185,13 @@
                            icon="pi-arrow-right"
                            size="large" (clicked)="orderCar()"></flexmile-button>
         </div>
+        @if (screen.screenSize() <= 1024) {
+          <div class="p-4">
+            <ng-container *ngTemplateOutlet="banners"></ng-container>
+          </div>
+        }
       </div>
+
     </div>
   </div>
 </div>
@@ -204,3 +208,23 @@
 </ng-template>
 
 <flexmile-modal [isOpen]="ordered" [hideCloseButton]="true" [content]="modalContent"></flexmile-modal>
+
+
+<ng-template #banners>
+  <div class="offer-order-banners">
+    <div class="pb-3">
+      <ng-template #banner1>Interesuje Cię <span style="color: #C1D342;">większa liczba</span><br>samochodów
+        dla Twojej firmy?
+      </ng-template>
+      <flexmile-banner-list size="small" [icon]="descriptionBanner.icon"
+                            [bannerTemplate]="banner1"></flexmile-banner-list>
+    </div>
+    <div>
+      <ng-template #banner2>Wybierz <span style="color: #C1D342;">kolejny samochód</span> z naszej<br>oferty i
+        złóż zamówienie!
+      </ng-template>
+      <flexmile-banner-list size="small" [icon]="descriptionBanner.icon"
+                            [bannerTemplate]="banner2"></flexmile-banner-list>
+    </div>
+  </div>
+</ng-template>
